Fix corrupted observatory names Fix display not reading in observatories.txt as UTF-8